AC_PREREQ([2.63])

AC_INIT([io.h])
AM_INIT_AUTOMAKE([tools], [0.1], [chandola@gmail.com])

AC_CONFIG_SRCDIR([io.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CHECK_TOOL(RANLIB,ranlib)

# Checks for headers.
AC_CHECK_HEADER(fftw3.h,,AC_MSG_ERROR([cannot find headers for libfftw3]))

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
